--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.mvc.view.suffix: .jsp
+spring.datasource.url=jdbc:mysql:
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update 
